2008-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psim-bottom, psim-gdb-bottom, psim-shared, psim-top.in: Add ability
	to force psim configuration to include System V IPC devices even when
	the test does not appear to be multiprocessing. This is used by some
	RTEMS application developers for system simulation and could be used
	to simulate a framebuffer if a UNIX process mirrored the buffer.

2008-09-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* runtest-bottom: Work on .exe and .ralf files.

2008-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psim-gdb-bottom: Also break on C_exception_handler so we can see what
	caused the exception. This indicates an error in the program.

2008-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psim-shared, psim-top.in, runtest-bottom, runtest-top.in: Now running
	mptests.

2008-09-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Rework psim scripts to share code for
	creating device trees and actually running the tests. Overhaul the
	device tree generated to always include a block of Flash and a
	Real-Time Clock. When running MP tests enable the shared memory and
	semaphore devices.
	* psim-bottom, psim-gdb-bottom, psim-gdb-top.in, psim-shared,
	psim-top.in, runtest-bottom, runtest-top.in: New files.
	* psim, psim-gdb, runtest: Removed.

2008-08-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* runtest: Strip .exe or .ralf from file names.

2008-07-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psim-gdb: Change 4.8 to 4.9.

2008-03-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* runtest: Skip all fatal error tests.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* runtest: Change 4.8 to 4.9.

2007-09-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* runtest: Add capture to list of interative tests to skip in batch
	mode.

2007-01-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Use MKDIR_P instead of mkdir_p.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>
