@@ -27,6 +27,10 @@ if [ $# -eq 0 ] ; then
   fatal
 fi
 
+if [ X${RUN} = X ] ; then
+  RUN=${rtemsTarget}-run
+fi
+
 gen_device_tree ${1} >${TREE_FILE}
 runone ${1} ${limit}
 rm -f ${TREE_FILE}
