@@ -2,11 +2,10 @@
 ## TODO: may want command line ability to turn on some psim tracing
 
 # Recognize special argument to force System V IPC support on
+use_sysv_ipc="auto"
 if [ X${1} = "X-psim_sysv" ] ; then
   use_sysv_ipc="yes"
   shift
-else
-  use_sysv_ipc="auto"
 fi
 
 ## Generate the GDB Command Script
@@ -21,7 +20,7 @@ gen_gdb_script()
   echo "printf \"Use run to start the RTEMS application\\n\""
 }
 
-GDB=powerpc-rtems4.9-gdb
+GDB=${rtemsTarget}-gdb
 
 gen_device_tree ${1} >${TREE_FILE}
 gen_gdb_script       >${GDB_FILE}
