@@ -13,10 +13,8 @@
 #
 
 TREE_FILE=psim_tree.${LOGNAME}
-if [ X${RUN} = X ] ; then
-  RUN=@target_alias@-run
-fi
 
+rtemsTarget=@target_alias@
 
 progname=${0##*/}        # fast basename hack for ksh, bash
 
